# se-toolkit-lab-7

./: AGENTS.md  README.md  docker-compose.yml
backend/app/data/: init.sql
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  intent_router.py  query.py
bot/handlers/commands/: __init__.py  health.py  help.py  labs.py  scores.py  start.py
bot/services/: __init__.py  api_client.py  llm_client.py
